# eclair

./: .gitignore  CMakeLists.txt
include/cursor/: cursor.h
include/document/: text_document.h
include/editor/: editor_content.h  editor_view.h
include/input/: input_controller.h
include/selection/: selection_data.h
include/special/: special_characters.h
include/utility/: impl_utility.h
scripts/: Dependencies.cmd  Dependencies.sh
src/: CMakeLists.txt  main.cpp
src/cursor/: cursor.cpp
src/document/: text_document.cpp
src/editor/: editor_content.cpp  editor_view.cpp
src/input/: input_controller.cpp
src/selection/: selection_data.cpp
src/special/: special_characters.cpp
src/utility/: impl_utility.cpp
